--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>projektek</h1>
-    <a href="/web-projektek/elso">elso</a>
-    <a href="/web-projektek/masodik">masodik</a>
+    <a href="/elso">elso</a>
+    <a href="/masodik">masodik</a>
 </body>
 </html>
