--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>projektek</h1>
-    <a href="./elso">elso</a>
-    <a href="./masodik">masodik</a>
+    <a href="./elso/index.html">elso</a>
+    <a href="./masodik/index.html">masodik</a>
 </body>
 </html>
