--- a/harmadik/index.html
+++ b/harmadik/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>projektek</h1>
-    <a href="/elso">elso</a>
-    <a href="/masodik">masodik</a>
-    <a href="/harmadik">harmadik</a>
+    <iframe src="https://wikipedia.hu" frameborder="0"></iframe>
+    <iframe src="index.html" frameborder="0"></iframe>
 </body>
 </html>
