--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>projektek</h1>
     <a href="./elso/index.html">elso</a>
     <a href="./masodik/index.html">masodik</a>
-
+    <script src="script.js"></script>
 </body>
 </html>
